# freight

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: build.cpp.0D293C5F16FE87A2.idx  build.cpp.AED74DBFA8D3CA7E.idx  build.cpp.C4D530AF723772C0.idx  cli.h.6C744C9DAB32EDDA.idx  compiler.cpp.EF28ACBF2255BD86.idx  compiler.h.00A3A75E8625A191.idx  fail.h.94CBA69E844DEB1B.idx  fail.h.D33BEEFAEC9AC514.idx  io.h.37640FEE301B36BF.idx  main.cpp.50B05F807FA404FA.idx  main.cpp.69B37DDF1BCDECA0.idx  main.cpp.AD9079D087303CC7.idx  manifest.h.B70A38E9FE6A7F67.idx  manifest.h.F1EFD61D7D4AB997.idx  manifest.h.FD6667C49B953DD0.idx  new.cpp.50F2DE13A87A6D96.idx  new.cpp.AE5CAD26FDB7A396.idx  new.cpp.E08219A3372E75DD.idx  pch.h.C8C52676B9005A57.idx  toml.hpp.1993D3B9BAC97C2A.idx  toml.hpp.B9D25336E74D1264.idx
doc/: bin_build_output.txt  lib_build_output.txt  simple_cached_filedata  timestamps.json  timestamps_formatted.json  xml_cached_filedata.xml
scripts/: build.sh  format-all.sh  util.sh
scripts/cmake/: build.sh  configure.sh
src/: Cmds.h  Init.cpp  Io.cpp  Io.h  Main.cpp  Pch.h  Run.cpp  Stim.cpp  Toml.cpp  Toml.h  Util.cpp  Util.h  Workspace.cpp  Workspace.h  build.cpp  cli.cpp  cli.h  cmds.h  commands.h  compiler.c  compiler.cpp  compiler.h  filetime.cpp  init.c  init.cpp  io.h  main.cpp  manifest.h  new.cpp  pch.h  run.c  run.cpp  stim.c  stim.cpp  toml.h  util.c  util.cpp  util.h  workspace.c  workspace.cpp  (+1 more)
src/Support/: Error.h  Io.cpp  Io.h  Mem.h  Util.cpp  Util.h
test/: CMakeLists.txt  test_filesystem.c
tests/: CMakeLists.txt
tests/compiler/: CMakeLists.txt
tests/compiler/compile_helloworld/: CMakeLists.txt
